--- a/style.css
+++ b/style.css
@@ -67,29 +67,43 @@ h6 {
 
 /* styling the page */
 
+:root {
+    font-family: sans-serif;
+}
+
 body {
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 5fr;
+    grid-template-rows: auto 5fr;
     grid-template-areas: "nav header"
         "nav main";
-    padding: 2%;
+
 }
 
 header {
     grid-area: header;
     display: grid;
-    grid-template-columns: 4fr 1fr;
-    gap: 3rem;
-    align-items: start;
+    grid-template-columns: 3fr auto auto;
+    grid-template-rows: auto auto;
+    align-items: center;
+    background: white;
+    padding: 1rem 2rem;
+    column-gap: 1rem;
+    row-gap: 1.5rem;
+    grid-template-areas: "form . user-info"
+        "greetings user-actions user-actions";
 }
 
 nav {
     grid-area: nav;
+    background-color: aquamarine;
+    padding: 2rem;
 }
 
 main {
     grid-area: main;
+    background-color: grey;
+    padding: 1rem;
 }
 
 ul {
@@ -100,33 +114,83 @@ ul {
 
 .header-user-info {
     display: grid;
-    grid-template-columns: 1fr 1fr 3fr;
+    grid-template-columns: auto auto auto;
+    align-items: center;
+    gap: 2rem;
+    justify-items: end;
+    grid-area: user-info;
+    font-weight: bold;
+    font-size: 1.5rem;
 }
 
 .header-greetings {
     display: grid;
     grid-template-columns: 1fr 5fr;
+    grid-area: greetings;
+    font-weight: bold;
+    align-items: center;
+
 }
 
 .header-user-actions {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1rem;
+    grid-area: user-actions;
+    align-items: center;
 }
 
 form {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: auto 3fr;
+    gap: 0.5rem;
+    align-items: center;
 
-    align-items: baseline;
 }
 
 .header-user-actions button {
-    padding: 1em;
-    border-radius: 15%;
-    width: 10ch;
+    padding: 0.5rem;
+    border-radius: 24px;
+    width: 13ch;
     font-size: 0.9rem;
-    border: none;
+    border: 1px solid black;
     background-color: rgb(51, 192, 173);
     color: white;
+    outline: none;
+}
+
+header img {
+    height: 2rem;
+}
+
+.header-user-info .avatar {
+    height: 3rem;
+    width: 3rem;
+}
+
+.avatar {
+    border-radius: 50%;
+    padding: 0.1rem;
+}
+
+.avatar.main {
+    background: yellow;
+}
+
+.header-greetings .avatar {
+    height: 5rem;
+    width: 5rem;
+}
+
+input[type="search"] {
+    border: 1px solid black;
+    border-radius: 24px;
+    background-color: rgb(230, 227, 227);
+    outline: none;
+    padding: 0.8em;
+    font-size: 0.8rem;
+}
+
+.header-greetings>div :last-child {
+    font-size: 1.5rem;
 }
