--- a/style.css
+++ b/style.css
@@ -71,6 +71,11 @@ h6 {
     font-family: sans-serif;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
 body {
     display: grid;
     grid-template-columns: 1fr 4fr;
@@ -96,8 +101,8 @@ header {
 
 nav {
     grid-area: nav;
-    background-color: aquamarine;
-    padding: 2rem;
+    background-color: rgba(43, 43, 165, 0.973);
+    padding: 1rem;
 }
 
 main {
@@ -129,6 +134,7 @@ ul {
     grid-area: greetings;
     font-weight: bold;
     align-items: center;
+    column-gap: 1rem;
 
 }
 
@@ -193,4 +199,46 @@ input[type="search"] {
 
 .header-greetings>div :last-child {
     font-size: 1.5rem;
+}
+
+
+.nav-icon {
+    display: grid;
+    grid-template-columns: auto auto;
+    margin-bottom: 5rem;
+    font-size: 1.5rem;
+    gap: 0.5rem;
+    align-items: center;
+    justify-content: start;
+}
+
+nav img {
+    height: 2rem;
+}
+
+.nav-icon img {
+    height: 4rem;
+}
+
+.nav-user-action>* {
+    display: grid;
+    grid-template-columns: auto auto;
+}
+
+.nav-user-support>* {
+    display: grid;
+    grid-template-columns: auto auto;
+}
+
+.nav-user-action {
+    margin-bottom: 5rem;
+}
+
+nav>ul>li {
+    display: grid;
+    grid-template-columns: span 2;
+    column-gap: 1rem;
+    justify-content: start;
+    margin-bottom: 1rem;
+
 }
