--- a/style.css
+++ b/style.css
@@ -107,8 +107,15 @@ nav {
 
 main {
     grid-area: main;
-    background-color: grey;
+    background-color: rgb(235, 229, 229);
     padding: 1rem;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: max-content max-content;
+    grid-template-areas: "projects announcements"
+        "projects trending";
+    column-gap: 1rem;
+    box-shadow: inset 1px 0px 15px gray;
 }
 
 ul {
@@ -240,5 +247,91 @@ nav>ul>li {
     column-gap: 1rem;
     justify-content: start;
     margin-bottom: 1rem;
+}
 
+.projects {
+    grid-area: projects;
+}
+
+.announcements {
+    grid-area: announcements;
+    margin-bottom: 1rem;
+}
+
+.trending {
+    grid-area: trending;
+}
+
+.projects-content {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1rem;
+}
+
+.project-cards {
+    border: none;
+    padding: 1rem;
+    background-color: white;
+    box-shadow: -5px 5px 10px gray;
+    display: grid;
+    outline: none;
+    border-radius: 15px;
+}
+
+h3 {
+    font-size: 1.2rem;
+}
+
+h2 {
+    font-size: 1.8rem;
+    margin-bottom: 1rem;
+
+}
+
+.project-cards-actions {
+    display: grid;
+    grid-template-columns: repeat(3, 2rem);
+    justify-content: end;
+    margin-top: 1rem;
+    column-gap: 1rem;
+
+}
+
+.announcements-content {
+    background-color: white;
+    padding-left: 1rem;
+    padding: 1rem;
+    outline: none;
+    border-radius: 15px;
+    box-shadow: -5px 5px 10px gray;
+}
+
+.announcements-list>li {
+    margin-bottom: 1rem;
+    padding: 1rem;
+}
+
+.announcements-list>:nth-child(2) {
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+}
+
+.trending-content {
+    background-color: white;
+    padding-left: 1rem;
+    padding: 1rem;
+    outline: none;
+    border-radius: 15px;
+    box-shadow: -5px 5px 10px gray;
+}
+
+.trending-card>li {
+    display: grid;
+    grid-template-columns: 2rem 1fr;
+    column-gap: 1rem;
+    align-items: center;
+}
+
+.trending-card>li {
+    margin: 1rem;
 }
